[project]
name = "PlayStableBaselines3"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "rl-zoo3",
    "gymnasium[classic-control]",
    "gymnasium[other]", # 用于使用pymovie生成视频
    "stable-baselines3[extra]",
    "tensorboard",
    "standard-imghdr",
    "torch==2.7.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"

# 国内镜像：https://mirror.nju.edu.cn/pytorch/whl/cu128
# 我的NAS缓存：http://192.168.1.16:3320/pytorch/whl/cu128
url = "http://192.168.1.16:3320/pytorch/whl/cu128" # 国内镜像
explicit = true